app/assets/stylesheets/reset.scss
/* reset css */
body {
  background-color: #FFFFFF;
  color: #333333;
  background-image: image-url('bg_grad.jpg');
  background-repeat: repeat-x;
  border: none;
  margin: 0;
  font-family: "Lucida Grande", Verdana, Arial, sans-serif;
  font-size: 12px; }

small {
  color: gray; }

textarea {
  font-family: "Lucida Grande", Verdana, Arial, sans-serif; }

dt {
  font-size: 11px;
  color: #999999;
  display: inline;
  clear: both;
  float: left;
  width: 100px; }

dd {
  display: inline;
  float: left; }

a {
  color: #566ca5;
  text-decoration: none;
  font-weight: normal;
  &:hover {
    text-decoration: underline; } }

legend {
  font-size: 15px;
  font-weight: bold;
  padding-left: 0;
  color: #999; }

img {
  vertical-align: middle;
  padding: 0;
  margin: 0;
  display: inline-block;
  border: 0; }

th {
  color: #423f54;
  font-weight: bold;
  background-color: #e5eaef; }

pre {
  padding: 1em;
  font-size: 11px;
  &.auto_generated {} }

input, textarea {
  border: 1px solid #eee; }

